@@ -5,6 +5,8 @@
 * Ben Klemens
 * Sjoerd Siebinga
 * Cillian de Roiste
+* Miron Tewfik
+* Robert Heckel
 
 I want to say a big <b>THANK YOU</b> for all people which supported this project in this way.
 </pre>
